5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1716_2504.log
== TEST (2019-05-07 17:53:18) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucócitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

soma = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	soma = soma + 1
print(soma)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:53:32) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

soma = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	soma = soma + 1
print(soma)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:54:35) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

soma = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	soma = soma + 1
print(soma)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:54:55) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

soma = 0

while(a > b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	soma = soma + 1
print(soma)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:00:03) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:00:06) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 18:00:30) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a > b and c < d):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:00) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a > b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:08) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a => b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- ERROR:
File "XXXX", line 8
    while(a => b):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:27:13) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a >= b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:10) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(b < a):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:28:29) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 1
while(b < a):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:17) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(b <= a):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:41) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while((b * 2) < a):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:59) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a > b * 2):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:00) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a * 2 > b * 2):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:50) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a * 2 > b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:35:58) 
-- CODE:
a = int(input("Quantidade inicial de copias do virus: "))
b = int(input("Quantidade inicial de leucocitos no sangue: "))
c = int(input("Percentual de multiplicacao diaria do virus: "))
d = int(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0

while(a * 2 > b):
	a = (a * (c/100)) + a
	b = (b * (d/100)) + b
	dia = dia + 1
print(dia)
	
-- EXECUTION TIME:
0.149264
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
